# BookFactory

./: .gitignore  PROJECT.md  pyproject.toml
.pytest-div-parser/: test_exports_valid_epub_from_ccurrent  test_loads_utf8_markdown_prompcurrent  test_missing_prompt_raises_clecurrent  test_reads_epub_metadata_and_scurrent  test_rejects_document_without_current  test_rejects_invalid_epubcurrent  test_rejects_non_epub_extensiocurrent  test_rejects_non_epub_output_pcurrent  test_rejects_unsafe_prompt_namcurrent  test_returns_cached_prompt_witcurrent
.pytest-marker-protocol/: test_exports_valid_epub_from_ccurrent  test_loads_utf8_markdown_prompcurrent  test_missing_prompt_raises_clecurrent  test_reads_epub_metadata_and_scurrent  test_rejects_document_without_current  test_rejects_invalid_epubcurrent  test_rejects_non_epub_extensiocurrent  test_rejects_non_epub_output_pcurrent  test_rejects_unsafe_prompt_namcurrent  test_returns_cached_prompt_witcurrent
.pytest-retry-full/: test_exports_valid_epub_from_ccurrent  test_loads_utf8_markdown_prompcurrent  test_missing_cached_marker_retcurrent  test_missing_prompt_raises_clecurrent  test_reads_epub_metadata_and_scurrent  test_rejects_document_without_current  test_rejects_invalid_epubcurrent  test_rejects_non_epub_extensiocurrent  test_rejects_non_epub_output_pcurrent  test_rejects_unsafe_prompt_namcurrent  test_retry_exhaustion_identificurrent  test_returns_cached_prompt_witcurrent
docs/: ARCHITECTURE.md
prompts/: review.md  translate.md
scripts/: __init__.py  manual_translation_test.py  translate_book.py
src/: app.py
(+57 files in other folders)
