[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookfactory"
version = "0.1.0"
description = "A document automation engine"
requires-python = ">=3.14"
dependencies = [
    "EbookLib>=0.20,<1.0",
    "openai>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
